--- a/app/src/main/res/layout/group_cell.xml
+++ b/app/src/main/res/layout/group_cell.xml
@@ -25,7 +25,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/splashlogo"
-                android:scaleType="fitXY"/>
+                android:scaleType="fitXY"
+                />
 
             <TextView
                 android:id="@+id/textView"
@@ -43,8 +44,6 @@
                 android:textSize="14sp"
                 android:visibility="visible"
                 />
-
-
 
         </FrameLayout>
     </LinearLayout>
