--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,11 +18,12 @@
             android:padding="12dp">
 
             <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:id="@+id/headerLayout"
+                android:layout_width="359dp"
+                android:layout_height="123dp"
                 android:layout_above="@+id/mainLayout"
                 android:layout_alignParentTop="true"
-                android:id="@+id/headerLayout">
+                android:layout_marginTop="9dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -33,8 +34,8 @@
                     <ImageView
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:src="@drawable/logo_log_in"
-                        android:scaleType="fitCenter"/>
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/logo_log_in" />
 
                 </LinearLayout>
 
