--- a/app/src/main/res/layout/activity_main_tabbing.xml
+++ b/app/src/main/res/layout/activity_main_tabbing.xml
@@ -18,7 +18,7 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar_top"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="70dp"
             android:gravity="center"
             android:layout_gravity="center">
 
