--- a/app/src/main/res/layout/activity_notification_vc.xml
+++ b/app/src/main/res/layout/activity_notification_vc.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".NotificationVC">
+    tools:context="com.nsw.baseballnsw.NotificationVC">
 
     <include layout="@layout/textposter"
         android:id="@+id/textposter"/>
