--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,4 +1,6 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
@@ -10,8 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentTop="false"
-        android:fillViewport="true">
+        android:layout_alignParentTop="false">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -19,7 +20,6 @@
             android:orientation="vertical">
 
             <include layout="@layout/user_form_register"/>
-
 
             <LinearLayout
                 android:layout_width="match_parent"
