--- a/app/src/main/res/layout/fragment_article_details_vc.xml
+++ b/app/src/main/res/layout/fragment_article_details_vc.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ArticleDetailsVC">
+    tools:context="com.nsw.baseballnsw.ArticleDetailsVC">
 
     <TextView
         android:id="@+id/firstTV"
