--- a/app/src/main/res/layout/fragment_event_detail_vc.xml
+++ b/app/src/main/res/layout/fragment_event_detail_vc.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".EventDetailVC"
+    tools:context="com.nsw.baseballnsw.EventDetailVC"
     android:padding="@dimen/med_pad">
 
     <LinearLayout
