--- a/app/src/main/res/layout/activity_group_vc.xml
+++ b/app/src/main/res/layout/activity_group_vc.xml
@@ -60,7 +60,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:weightSum="2"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:layout_marginBottom="20dp">
                     <ImageView
                         android:layout_width="50dp"
                         android:layout_height="50dp"
