--- a/app/src/main/res/layout/custom_dialogbox_register.xml
+++ b/app/src/main/res/layout/custom_dialogbox_register.xml
@@ -25,15 +25,15 @@
             android:textStyle="normal"
             android:fontFamily="@font/lato_regular"
             />
+
         <ListView
             android:layout_weight="2.6"
+            android:id="@+id/list"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:id="@+id/list"
-            android:divider="@null"
+            android:clickable="true"
+            android:choiceMode="singleChoice"
             android:layout_below="@+id/tvHeading"/>
-
-
         <Button
             android:id="@+id/btn_dialog"
             android:layout_width="match_parent"
@@ -44,10 +44,15 @@
             android:layout_weight="0.5"
             android:layout_marginRight="15dp"
             android:layout_marginLeft="15dp"
-            android:layout_marginBottom="15dp" />
+            android:layout_marginBottom="15dp"
+            android:onClick="btnDone"/>
 
     </LinearLayout>
 
 
-
+    <ProgressBar
+        android:id="@+id/progressbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"/>
 </RelativeLayout>
