--- a/app/src/main/res/layout/custom_dialogbox_register.xml
+++ b/app/src/main/res/layout/custom_dialogbox_register.xml
@@ -31,8 +31,8 @@
             android:id="@+id/list"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:clickable="true"
-            android:choiceMode="singleChoice"
+            android:divider="@null"
+            android:dividerHeight="10dp"
             android:layout_below="@+id/tvHeading"/>
 
         <Button
