--- a/app/src/main/res/layout/club_one.xml
+++ b/app/src/main/res/layout/club_one.xml
@@ -1,32 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/txt_title"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="4"
-        android:padding="10dp">
-
-
-        <CheckBox
-            android:id="@+id/cb1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:focusable="false"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:padding="10dp"
-            android:text="@string/app_name"
-            android:textSize="14sp"
-            android:fontFamily="@font/lato_regular"
-            android:focusableInTouchMode="false" />
-
-    </LinearLayout>
-
-
-</RelativeLayout>
+    android:layout_height="wrap_content"
+    android:gravity="center_vertical"
+    android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+    android:padding="10dp"
+    android:layout_margin="10dp"
+    android:fontFamily="@font/lato_regular"
+    android:textColor="@color/black"
+    android:textStyle="bold"
+    android:text="@string/app_name"/>
