--- a/app/src/main/res/layout/main_cell_item.xml
+++ b/app/src/main/res/layout/main_cell_item.xml
@@ -93,6 +93,7 @@
                     android:layout_weight="1.9"
                     android:singleLine="false"
                     android:layout_marginLeft="10dp"
+                    android:clickable="true"
                     android:gravity="center_vertical" />
 
                 <TextView
