--- a/app/src/main/res/layout/activity_notification_vc.xml
+++ b/app/src/main/res/layout/activity_notification_vc.xml
@@ -164,7 +164,8 @@
         android:gravity="center_vertical"
         android:padding="@dimen/med_pad"
         android:fontFamily="@font/lato_regular"
-        android:textSize="12sp"/>
+        android:textSize="12sp"
+        android:linksClickable="true"/>
 
 
 
