--- a/app/src/main/res/layout/custom_dialogbox_register.xml
+++ b/app/src/main/res/layout/custom_dialogbox_register.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="350dp"
-    android:background="@color/white">
+    android:background="@drawable/textshape">
 
 
     <LinearLayout
@@ -18,13 +18,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Select Clubs"
-            android:background="@color/colorPrimary"
             android:padding="20dp"
             android:gravity="center"
-            android:textColor="@color/white"
-            android:textStyle="normal"
-            android:fontFamily="@font/lato_regular"
-            />
+            android:textColor="@color/colorPrimary"
+            android:textStyle="bold"
+            android:fontFamily="@font/lato_regular" />
 
         <ListView
             android:layout_weight="2.6"
@@ -33,7 +31,8 @@
             android:layout_height="0dp"
             android:divider="@null"
             android:dividerHeight="10dp"
-            android:layout_below="@+id/tvHeading"/>
+            android:layout_below="@+id/tvHeading"
+           />
 
         <Button
             android:id="@+id/btn_dialog"
@@ -43,10 +42,10 @@
             android:background="@android:color/transparent"
             android:textColor="@color/colorPrimary"
             android:layout_weight="0.5"
-            android:layout_marginRight="15dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginBottom="15dp"
-            android:onClick="btnDone"/>
+            android:onClick="btnDone"
+            android:textStyle="bold"
+            android:layout_margin="10dp"
+            />
 
     </LinearLayout>
 
