--- a/app/src/main/res/layout/activity_group_vc.xml
+++ b/app/src/main/res/layout/activity_group_vc.xml
@@ -12,35 +12,56 @@
         android:layout_height="wrap_content"
         android:background="@color/white">
 
-
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="120dp"
+            android:orientation="horizontal"
+            android:id="@+id/ll_main"
+            android:gravity="center"
+            android:weightSum="3"
             android:background="@drawable/header_bg"
-            android:orientation="vertical"
-            android:id="@+id/relativeLayout">
+            android:visibility="visible">
 
 
-            <LinearLayout
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar_top"
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
-                android:orientation="horizontal"
-                android:weightSum="3">
+                android:layout_height="50dp"
+                android:layout_marginTop="10dp">
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="top|center"
+                    android:src="@drawable/logo_log_in"
+                    android:visibility="gone"/>
+
+                <TextView
+                    android:id="@+id/toolbar_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="50dp"
+                    android:padding="10dp"
+                    android:text="Toolbar Title"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:visibility="gone"/>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="120dp"
+                    android:layout_height="40dp"
                     android:orientation="horizontal"
                     android:id="@+id/ll_back"
                     android:layout_weight="1">
 
                     <ImageView
-                        android:layout_width="12dp"
-                        android:layout_height="12dp"
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
                         android:src="@drawable/back"
                         android:layout_gravity="center"
-                        android:layout_margin="5dp"
-                        />
+                        android:layout_marginRight="5dp"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -50,74 +71,14 @@
                         android:layout_gravity="center"
                         android:singleLine="true"
                         android:maxLines="1"
+                        android:fontFamily="@font/lato_regular"
+                        android:textStyle="bold"
+                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                         android:lines="1"
                         android:textSize="12sp"/>
                 </LinearLayout>
-
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:weightSum="2"
-                    android:layout_weight="1"
-                    android:layout_marginBottom="20dp">
-                    <ImageView
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:src="@drawable/logo_log_in"
-                        android:layout_gravity="center"
-                        />
-
-                    <TextView
-                        android:id="@+id/group_title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@android:color/transparent"
-                        android:inputType="text"
-                        android:layout_gravity="center"
-                        android:text="@string/notification_title"
-                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-                        android:textColor="@color/white"
-                        android:textStyle="bold"
-                        android:textAlignment="center"
-                        android:singleLine="true"
-                        android:maxLines="1"
-                        android:lines="1"
-                        tools:ignore="TextViewEdits"
-                        android:visibility="visible"/>
-                </LinearLayout>
-
-
-
-                <LinearLayout
-                    android:layout_weight="0.2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="120dp"
-                    android:orientation="horizontal"
-                    android:id="@+id/ll_edit"
-                    android:layout_gravity="center|right"
-                    android:gravity="center|right"
-                    android:visibility="visible">
-
-
-                    <TextView
-                        android:id="@+id/tv_edit"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/add_user"
-                        android:textColor="@color/white"
-                        android:textSize="12sp"
-                        android:padding="5dp"
-                        android:layout_gravity="end|center"
-                        android:gravity="end|center"
-                        android:singleLine="true"
-                        android:maxLines="1"
-                        android:lines="1"
-                        />
-                </LinearLayout>
-            </LinearLayout>
-        </RelativeLayout>
+            </android.support.v7.widget.Toolbar>
+        </LinearLayout>
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
@@ -146,14 +107,6 @@
             android:layout_below="@+id/tabs"
             android:background="@drawable/layout_shape">
 
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="1px"
-                android:orientation="vertical"
-                android:background="@color/black"
-                android:visibility="gone">
-            </LinearLayout>
-
             <android.support.v4.view.ViewPager
                 android:id="@+id/grp_view_pager"
                 android:layout_width="match_parent"
@@ -164,5 +117,34 @@
                 />
 
         </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:orientation="horizontal"
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/iv_logo"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:src="@drawable/logo_log_in"
+                android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/toolbar_heading"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_toEndOf="@+id/iv_logo"
+                android:padding="8dp"
+                android:layout_margin="5dp"
+                android:text="Toolbar Title"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:singleLine="true"
+                android:visibility="visible" />
+        </RelativeLayout>
     </RelativeLayout>
 </ScrollView>
