--- a/app/src/main/res/layout/main_image_cell.xml
+++ b/app/src/main/res/layout/main_image_cell.xml
@@ -35,6 +35,9 @@
                 style="@style/textview_small"
                 android:gravity="center"
                 android:maxLines="2"
+                android:textSize="12sp"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                android:fontFamily="@font/lato_regular"
                 android:text="Rugby National Now I have A really long adn big name" />
         </LinearLayout>
 
@@ -61,6 +64,9 @@
                     style="@style/textview_small"
                     android:layout_marginLeft="15dp"
                     android:singleLine="true"
+                    android:textSize="12sp"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                    android:fontFamily="@font/lato_regular"
                     android:gravity="center_vertical" />
 
                 <Button
@@ -91,17 +97,15 @@
                     android:layout_height="150dp"
                     android:elevation="10dp"
                     android:layout_gravity="center_horizontal"
-                    android:background="@drawable/notice_shape">
+                    android:background="@drawable/notice_shape"
+                    android:layout_marginLeft="10dp">
 
                     <ImageView
                         android:id="@+id/bodyIV"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/logo_log_in"
-                        android:scaleType="fitXY"
-                        android:adjustViewBounds="true"
-
-                        />
+                        android:src="@drawable/splashlogo"
+                        android:scaleType="fitXY"/>
 
                     <TextView
                         android:id="@+id/secondTV"
@@ -144,6 +148,9 @@
                 style="@style/textview_small"
                 android:singleLine="true"
                 android:gravity="bottom|left"
+                android:textSize="12sp"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                android:fontFamily="@font/lato_regular"
                 android:layout_gravity="bottom|left"/>
 
         </LinearLayout>
