--- a/app/src/main/res/layout/fragment_event_comments_vc.xml
+++ b/app/src/main/res/layout/fragment_event_comments_vc.xml
@@ -1,37 +1,32 @@
-<ScrollView
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:fillViewport="true">
 
-    <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_margin="10dp"
         android:background="@drawable/shape_user">
 
-        <include layout="@layout/textposter"
-            android:id="@+id/textposter"/>
-
+        <include
+            android:id="@+id/textposter"
+            layout="@layout/textposter" />
 
         <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swiperefresh"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".NoticeBoardVC"
-            android:id="@+id/swiperefresh"
-            android:layout_above="@id/textposter">
-
+            android:layout_above="@id/textposter"
+            tools:context=".NoticeBoardVC">
 
             <ListView
+                android:id="@+id/list"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/list">
-
-            </ListView>
+                android:layout_height="match_parent"/>
 
         </android.support.v4.widget.SwipeRefreshLayout>
-
 
     </RelativeLayout>
 </ScrollView>
