--- a/app/src/main/res/layout/main_cell.xml
+++ b/app/src/main/res/layout/main_cell.xml
@@ -1,123 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/grid_cell_height_large"
-    android:padding="@dimen/small_pad"
-    android:background="@drawable/textshape"
-    android:layout_margin="10dp">
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginTop="30dp"
+    android:background="@drawable/textshape">
 
     <LinearLayout
+        android:id="@+id/linear_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_gravity="top"
         android:gravity="center"
-        android:id="@+id/linear_main">
+        android:orientation="vertical">
 
         <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/imageView"
             android:layout_width="@dimen/user_image_width"
             android:layout_height="@dimen/user_image_width"
-            android:id="@+id/imageView"
-            android:src="@drawable/splashlogo"
-            app:civ_border_width="0dp"
             android:layout_margin="5dp"
+            android:src="@drawable/splashlogo"
             app:civ_border_color="#FF000000"
-            />
-
+            app:civ_border_width="0dp" />
 
         <TextView
-            android:layout_width="@dimen/user_image_width"
-            android:layout_height="@dimen/user_image_width"
             android:id="@+id/usernameTV"
             style="@style/textview_small"
+            android:layout_width="@dimen/user_image_width"
+            android:layout_height="@dimen/user_image_width"
+            android:fontFamily="@font/lato_regular"
             android:gravity="center"
             android:maxLines="2"
-            android:textSize="12sp"
+            android:text="Rugby National Now I have A really long adn big name"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-            android:fontFamily="@font/lato_regular"
-            android:text="Rugby National Now I have A really long adn big name" />
+            android:textSize="12sp" />
     </LinearLayout>
 
 
     <ImageView
+        android:id="@+id/speach_image"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_alignParentTop="true"
-        android:id="@+id/speach_image"
         android:layout_toRightOf="@id/linear_main"
         android:scaleType="fitXY" />
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
-        android:layout_alignEnd="@id/speach_image"
-        android:layout_alignStart="@id/speach_image"
         android:layout_alignBottom="@id/speach_image"
-        android:layout_alignTop="@id/speach_image"
-        android:orientation="vertical"
-        android:weightSum="3"
-        android:layout_margin="@dimen/small_pad"
+        android:layout_alignEnd="@id/speach_image"
+        android:layout_alignLeft="@id/speach_image"
         android:layout_alignRight="@id/speach_image"
-        android:layout_alignLeft="@id/speach_image">
+        android:layout_alignStart="@id/speach_image"
+        android:layout_alignTop="@id/speach_image"
+        android:layout_margin="@dimen/small_pad"
+        android:orientation="vertical"
+        android:weightSum="3">
 
         <!-- first Row-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/flag_button_width"
-            android:orientation="horizontal"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/firstTV"
+                style="@style/textview_small"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="First Row of text"
-                style="@style/textview_small"
-                android:singleLine="true"
+                android:fontFamily="@font/lato_regular"
                 android:gravity="center_vertical"
-                android:textSize="12sp"
+                android:singleLine="true"
+                android:text="First Row of text"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-                android:fontFamily="@font/lato_regular"/>
+                android:textSize="12sp" />
 
             <Button
                 android:id="@+id/flagButton"
                 android:layout_width="@dimen/flag_button_width"
                 android:layout_height="@dimen/flag_button_width"
                 android:background="@drawable/flag"
-                android:visibility="gone"
-                />
+                android:visibility="gone" />
 
         </LinearLayout>
 
         <!-- Second Row -->
         <TextView
             android:id="@+id/secondTV"
+            style="@style/textview_normal"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:text="Second row of text"
-            style="@style/textview_normal"
-            android:singleLine="false"
-            android:gravity="center_vertical"
             android:layout_weight="3"
-            android:textSize="16sp"
+            android:fontFamily="@font/lato_regular"
+            android:gravity="center_vertical"
+            android:singleLine="false"
+            android:text="Second row of text"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-            android:fontFamily="@font/lato_regular"/>
+            android:textSize="16sp" />
 
         <!-- Third Row -->
         <TextView
             android:id="@+id/thirdTV"
+            style="@style/textview_small"
             android:layout_width="match_parent"
             android:layout_height="@dimen/flag_button_width"
-            android:text="Third row of text"
-            style="@style/textview_small"
-            android:visibility="visible"
-            android:singleLine="true"
+            android:fontFamily="@font/lato_regular"
             android:gravity="center_vertical"
-            android:textSize="12sp"
+            android:singleLine="true"
+            android:text="Third row of text"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-            android:fontFamily="@font/lato_regular"/>
+            android:textSize="12sp"
+            android:visibility="visible" />
 
 
     </LinearLayout>
