--- a/app/src/main/res/layout/fragment_ladders.xml
+++ b/app/src/main/res/layout/fragment_ladders.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:weightSum="6"
+        android:weightSum="5.5"
         android:id="@+id/ll_first"
         android:layout_margin="15dp"
         android:background="@android:color/transparent"
@@ -22,6 +22,17 @@
             android:id="@+id/tv"
             android:textColor="@color/textgray"
             android:layout_marginLeft="10dp"/>
+
+        <TextView
+            android:layout_weight="0.6"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="PL"
+            android:gravity="center"
+            android:textColor="@color/textgray"
+            android:layout_gravity="center"
+            android:id="@+id/tv4"
+            android:padding="5dp"/>
 
         <TextView
             android:layout_weight="0.6"
@@ -45,27 +56,6 @@
             android:textColor="@color/textgray"
             android:id="@+id/tv2"/>
 
-        <TextView
-            android:layout_weight="0.6"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="D"
-            android:padding="5dp"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:textColor="@color/textgray"
-            android:id="@+id/tv3"/>
-
-        <TextView
-            android:layout_weight="0.6"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="P"
-            android:gravity="center"
-            android:textColor="@color/textgray"
-            android:layout_gravity="center"
-            android:id="@+id/tv4"
-            android:padding="5dp"/>
 
         <TextView
             android:layout_weight="0.6"
