--- a/app/src/main/res/menu/update_menu.xml
+++ b/app/src/main/res/menu/update_menu.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/update"
         android:title="Update"
-        app:showAsAction="ifRoom" />
-
+        app:showAsAction="ifRoom"
+        />
 
 </menu>
