--- a/app/src/main/res/layout/fragment_fixtures.xml
+++ b/app/src/main/res/layout/fragment_fixtures.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:src="@drawable/events_list_empty"
-        android:visibility="gone" />
+        android:visibility="" />
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swiperefresh"
