--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -77,9 +77,11 @@
     </style>
 
     <style name="MineCustomTabText" parent="TextAppearance.Design.Tab">
-        <item name="android:textSize">10sp</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/black</item>
     </style>
-
+    
     <style name="textview_normal" parent="@android:style/Widget.TextView">
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">@dimen/font_med</item>
