--- a/app/src/main/res/menu/create_group_menu.xml
+++ b/app/src/main/res/menu/create_group_menu.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/create"
-        android:title="+ Events"
+        android:id="@+id/creategrp"
+        android:title="+ Group"
         app:showAsAction="ifRoom"/>
 
 
